--- a/src/main/webapp/WEB-INF/views/src/views/includes/left-panel.html
+++ b/src/main/webapp/WEB-INF/views/src/views/includes/left-panel.html
@@ -26,6 +26,8 @@ will not initialize.
     <nav:group data-icon="fa fa-fw fa-base" title="基础数据">
         <nav:item ui-sref="company_list" title="单位/公司"/>
         <nav:item ui-sref="member_list" title="客户信息"/>
+        <nav:item ui-sref="itemCategory" title="产品分类"/>
+        <nav:item ui-sref="item" title="产品信息"/>
         <nav:item ui-sref="coupon" title="卡券管理"/>
     </nav:group>
     <nav:group data-icon="fa fa-fw fa-pencil" title="系统管理" permission-only="admin">
