--- a/src/main/webapp/WEB-INF/views/src/views/order/order_create.html
+++ b/src/main/webapp/WEB-INF/views/src/views/order/order_create.html
@@ -328,7 +328,7 @@
                                                 <tfoot>
                                                 <tr>
                                                     <td colspan="4">
-                                                        <ug-pagination page-info="pageInfoSetting" ></ug-pagination>
+                                                        <ug-pagination page-info="pageSetting" ></ug-pagination>
                                                     </td>
                                                 </tr>
                                                 </tfoot>
