--- a/src/main/webapp/WEB-INF/views/src/views/order/purchase.html
+++ b/src/main/webapp/WEB-INF/views/src/views/order/purchase.html
@@ -87,7 +87,7 @@
 						</div>
 						<div class="dt-toolbar-footer">
 							<div class="col-xs-12 col-sm-12">
-								<ug-pagination page-info="pageInfoSetting" ></ug-pagination>
+								<ug-pagination page-info="pageSetting" ></ug-pagination>
 							</div>
 						</div>
 					</div>
