--- a/src/main/webapp/WEB-INF/views/src/views/base/coupon.html
+++ b/src/main/webapp/WEB-INF/views/src/views/base/coupon.html
@@ -140,7 +140,7 @@
 						</div>
 						<div class="dt-toolbar-footer">
 							<div class="col-xs-12 col-sm-12">
-								<ug-pagination page-info="pageInfoSetting" ></ug-pagination>
+								<ug-pagination page-info="pageSetting" ></ug-pagination>
 							</div>
 						</div>
 					</div>
@@ -458,7 +458,7 @@
                         </div>
                         <div class="dt-toolbar-footer">
                             <div class="col-xs-12 col-sm-12">
-                                <ug-pagination page-info="pageInfoSetting" ></ug-pagination>
+                                <ug-pagination page-info="pageSetting" ></ug-pagination>
                             </div>
                         </div>
                     </div>
