--- a/src/main/webapp/WEB-INF/views/src/views/order/order_packing.html
+++ b/src/main/webapp/WEB-INF/views/src/views/order/order_packing.html
@@ -127,6 +127,7 @@
 									<th>订单编号</th>
                                     <th>客户经理</th>
                                     <th>收货人</th>
+                                    <th>批次号</th>
 									<th>订单状态</th>
 									<th>任务负责人</th>
 									<th>任务分配时间</th>
@@ -152,6 +153,7 @@
 									<td ng-bind="order.orderNo"></td>
                                     <td ng-bind="order.managerName"></td>
                                     <td ng-bind="order.consigneeName"></td>
+                                    <td ng-bind="order.batchNo"></td>
 									<td ng-bind="order.orderStatusDesc"></td>
 									<td ng-bind="order.packingTaskUsername"></td>
 									<td ng-bind="order.packingTaskCreateTime | date: 'yyyy-MM-dd hh:mm:ss'"></td>
