--- a/src/main/webapp/WEB-INF/views/src/views/plan/basePlan.html
+++ b/src/main/webapp/WEB-INF/views/src/views/plan/basePlan.html
@@ -66,7 +66,7 @@
 									<th>配送时间（星期）</th>
                                     <th>配送次数</th>
                                     <th>金额</th>
-                                    <th>起效时间</th>
+                                    <!--<th>起效时间</th>-->
                                     <th>操作</th>
 								</tr>
 								</thead>
@@ -82,7 +82,7 @@
                                     <td ng-bind="basePlan.deliveryTime"></td>
                                     <td ng-bind="basePlan.deliverCount"></td>
                                     <td ng-bind="basePlan.price"></td>
-                                    <td ng-bind="basePlan.beginTime | date: 'yyyy-MM-dd'"></td>
+                                    <!--<td ng-bind="basePlan.beginTime | date: 'yyyy-MM-dd'"></td>-->
                                     <td>
                                         <div ng-show="show">
                                             <a href="javascript:void(0);" data-ng-click="removeBasePlan(basePlan)" title="删除：{{basePlan.planName}}">
@@ -180,24 +180,24 @@
                             <input class="form-control" required="true" data-rule-minlength="1" data-rule-maxlength="20" ng-model="basePlan.price" name="name" placeholder="金额" type="text">
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label class="col-md-2 control-label">起效时间<span class="vaild">*</span></label>
-                        <div class="col-md-10">
-                            <div class="input-group">
-                                <input type="text" class="form-control" datepicker-popup="yyyy-MM-dd"
-                                       placeholder="起效时间"
-                                       ng-model="basePlan.beginTime"
-                                       close-text="关闭"
-                                       current-text="今日"
-                                       clear-text="清除"
-                                       is-open="datepickerSetting.beginTime.opened"
-                                       ng-required="true" />
-                                <div class="input-group-btn">
-                                    <button type="button" class="btn btn-default" ng-click="open($event, 1)"><i class="glyphicon glyphicon-calendar"></i></button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <!--<div class="form-group">-->
+                        <!--<label class="col-md-2 control-label">起效时间<span class="vaild">*</span></label>-->
+                        <!--<div class="col-md-10">-->
+                            <!--<div class="input-group">-->
+                                <!--<input type="text" class="form-control" datepicker-popup="yyyy-MM-dd"-->
+                                       <!--placeholder="起效时间"-->
+                                       <!--ng-model="basePlan.beginTime"-->
+                                       <!--close-text="关闭"-->
+                                       <!--current-text="今日"-->
+                                       <!--clear-text="清除"-->
+                                       <!--is-open="datepickerSetting.beginTime.opened"-->
+                                       <!--ng-required="true" />-->
+                                <!--<div class="input-group-btn">-->
+                                    <!--<button type="button" class="btn btn-default" ng-click="open($event, 1)"><i class="glyphicon glyphicon-calendar"></i></button>-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
                     <div class="form-group">
                         <label class="col-md-2 control-label">是否随机<span class="vaild">*</span></label>
                         <div class="col-md-10">
