--- a/src/main/webapp/WEB-INF/views/src/views/order/packing_task.html
+++ b/src/main/webapp/WEB-INF/views/src/views/order/packing_task.html
@@ -266,9 +266,9 @@
 									<td ng-bind="order.appointmentTime | date: 'yyyy-MM-dd'"></td>
 									<td>
 										<div ng-show="order.packingTaskStatus == null" >
-											<a href="javascript:void(0);" data-ng-click="bindPackingTask($index)" title="分配">
+											<button class="btn btn-sm btn-primary" btn-loading="order.saveBtnLoading" data-ng-click="bindPackingTask($index)" title="分配">
 												<span class="fa fa-inbox"> </span>
-											</a>
+											</button>
 										</div>
 										<div ng-show="order.packingTaskStatus == 0" >
 											<a href="javascript:void(0);" data-ng-click="unbindPackingTask($index)" title="取消">
